add display none to toast container

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<a href="https://afarhansib.github.io/">afarhansib</a>
 		</div>
 	</div>
-	<div class="toast neu"></div>
+	<div class="toast neu" style="display: none;"></div>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
